--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Your Name</h1>
         <p>Welcome to my online CV page. You can download my CV using the link below:</p>
-        <a href="Mahmoud.Marey.pdf" class="btn btn-primary" download>Download My CV (PDF)</a>
+        <a href="Mahmoud Marey.pdf" class="btn btn-primary" download>Download My CV (PDF)</a>
     </div>
 </body>
 </html>
