--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Your Name</h1>
+        <h1>Mahmoud Marey</h1>
         <p>Welcome to my online CV page. You can download my CV using the link below:</p>
         <a href="Mahmoud Marey.pdf" class="btn btn-primary" download>Download My CV (PDF)</a>
     </div>
